Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96524

Qsb tool output (errors) not visible when called From visual studio / cmake

    XMLWordPrintable

Details

    • Windows
    • 5d29cfe69620d42d2ad3fc2a01d01082314d2988 (qt/qtshadertools/dev) 9e02897c8356012c18aabf8b96d8b501723bceda (qt/qtshadertools/6.2)

    Description

      When an error occurs with qsb tool called from visual studio (cmake project, with qt_add_shader() macro), the message is not visible or displayed in the console output, which makes it harder to fix.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-96524
          # Subject Branch Project Status CR V

          Activity

            People

              jbornema Joerg Bornemann
              b.boichon Bertrand
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes